<resources>
    <string name="app_name">Drinder</string>

    <!-- Screen Titles   -->
    <string name="title_map_screen">Drinder - Map of Drinkers</string>
    <string name="title_profile_screen">Drinder - User Profile</string>
    <string name="title_login_screen">Drinder - Login</string>
    <string name="title_registration">Drinder - Registration</string>
    <string name="title_user_details_edit">Drinder - Edit Your Profile</string>
    <string name="title_user_details_show">Drinder - Information</string>

    <string name="hint_login">Enter Your Login</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_registration">Registration</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="hint_age">Your Age</string>
    <string name="hint_gender">Your Gender</string>
    <string name="hint_alcohol">Alcohol</string>
    <string name="hint_name">Your Name</string>
    <string name="btn_save_text">Save</string>

    <string name="name_text">Name:</string>
    <string name="age_text">Age:</string>
    <string name="gender_text">Gender:</string>
    <string name="alcohol_text">Alcohol:</string>
    <string name="edit_details_title">Let me guess who you are</string>
    <string name="edit_profile">Edit profile</string>
    <string name="share_location">Share location</string>
    <string name="marker_drinker">Drinker number</string>
    <string name="menu_title_change_theme">Change Theme</string>


    <!-- Error Text   -->
    <string name="error_empty_field">Empty field</string>
    <string name="error_user_not_exist">User does not exist</string>
    <string name="error_reg">Registration error</string>
    <string name="error_pass_not_eq">Passwords are not equals</string>
    <string name="error_age_positive">Age must be bigger that 0</string>
    <string name="error_age_too_high">Sorry, but u are not a record holder</string>
    <string name="error_save_data">Save data error</string>
    <string name="error_gps_permission">You didn\'t give permission to access your location</string>
    <string name="error_unable_receive_profile">Error due profile request. Check your internet connection and retry</string>

</resources>
