<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="by.hackathon.drinder.ui.authorization.LoginFragment"
        android:label="@string/title_login_screen"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/action_loginFragment_to_mapFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="by.hackathon.drinder.ui.registration.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_registrationFragment_to_userDetailEditFragment"
            app:destination="@id/userDetailEditFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/userDetailEditFragment"
        android:name="by.hackathon.drinder.ui.detail.UserDetailEditFragment"
        android:label="@string/title_user_details_edit"
        tools:layout="@layout/fragment_user_detail_edit">
        <action
            android:id="@+id/action_userDetailEditFragment_to_mapFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/userDetailFragment"
        android:name="by.hackathon.drinder.ui.detail.UserDetailFragment"
        android:label="@string/title_user_details_show"
        tools:layout="@layout/fragment_user_detail_show">
        <action
            android:id="@+id/action_userDetailFragment_to_userDetailEditFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:destination="@id/userDetailEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="by.hackathon.drinder.ui.map.MapFragment"
        android:label="@string/title_map_screen"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_userDetailFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:destination="@id/userDetailFragment" />
    </fragment>
</navigation>